umzug auf den pi vorbereiten

--- a/etc/apache.conf
+++ b/etc/apache.conf
@@ -1,19 +1,19 @@
 <VirtualHost *:80>
         ServerAdmin webmaster@localhost
 
-        WSGIDaemonProcess fnordpad user=www-data group=www-data threads=15
-        WSGIScriptAlias / /var/www/fnordpad/fnordpad.wsgi
+        WSGIDaemonProcess fnordpad user=www-data group=www-data threads=2
+        WSGIScriptAlias / /srv/fnordpad/fnordpad.wsgi
 
-        DocumentRoot /var/www
+        DocumentRoot /srv/fnordpad/www
         <Directory />
                 Options FollowSymLinks
                 AllowOverride None
         </Directory>
-        <Directory /var/www/>
+        <Directory /srv/fnordpad/>
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 XSendFile on
-                XSendFilePath /var/www/fnordpad/content/
+                XSendFilePath /srv/fnordpad/content/
                 WSGIProcessGroup fnordpad
                 WSGIApplicationGroup %{GLOBAL}
                 Order allow,deny
