bilder ausliefern optimieren.

--- a/etc/apache.conf
+++ b/etc/apache.conf
@@ -2,7 +2,7 @@
         ServerAdmin webmaster@localhost
 
         WSGIDaemonProcess fnordpad user=www-data group=www-data threads=2
-        WSGIScriptAlias / /srv/fnordpad/fnordpad.wsgi
+        WSGIScriptAlias / /srv/www/fnordpad/fnordpad.wsgi
 
         DocumentRoot /srv/www
         <Directory />
