--- a/etc/apache.conf
+++ b/etc/apache.conf
@@ -16,8 +16,7 @@
                 XSendFilePath /srv/www/fnordpad/content
                 WSGIProcessGroup fnordpad
                 WSGIApplicationGroup %{GLOBAL}
-                Order allow,deny
-                allow from all
+                Require all granted
         </Directory>
 
         ErrorLog ${APACHE_LOG_DIR}/error.log
